gccida/c3/combine_reloads
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/combine_reloads/src/reload.c:2121:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode outmode; // [rsp+28h] [rbp-38h] 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/combine_reloads/src/reload.c:2124:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode inmode; // [rsp+38h] [rbp-28h] 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/combine_reloads/src/reload.c:2164:6: error: use of undeclared identifier 'this_insn_1'; did you mean 'this_insn'?
if ( this_insn_1[2].fld[0].rtint != -1 ) 
     ^~~~~~~~~~~
     this_insn
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/combine_reloads/src/reload.c:181:12: note: 'this_insn' declared here
static rtx this_insn;
           ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/combine_reloads/src/reload.c:2166:20: error: use of undeclared identifier 'insn_data_0'; did you mean 'insn_data'?
for ( ic = 1; ic < insn_data_0[this_insn_1[2].fld[0].rtint].n_operands; ++ic ) 
                   ^~~~~~~~~~~
                   insn_data
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/combine_reloads/src/recog.h:249:31: note: 'insn_data' declared here
extern const struct insn_data insn_data[];
                              ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/combine_reloads/src/reload.c:2166:32: error: use of undeclared identifier 'this_insn_1'; did you mean 'this_insn'?
for ( ic = 1; ic < insn_data_0[this_insn_1[2].fld[0].rtint].n_operands; ++ic ) 
                               ^~~~~~~~~~~
                               this_insn
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/combine_reloads/src/reload.c:181:12: note: 'this_insn' declared here
static rtx this_insn;
           ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/combine_reloads/src/reload.c:2168:7: error: use of undeclared identifier 'insn_data_0'; did you mean 'insn_data'?
if ( *insn_data_0[this_insn_1[2].fld[0].rtint].operand[ic].constraint == 61 
      ^~~~~~~~~~~
      insn_data
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/combine_reloads/src/recog.h:249:31: note: 'insn_data' declared here
extern const struct insn_data insn_data[];
                              ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/combine_reloads/src/reload.c:2168:19: error: use of undeclared identifier 'this_insn_1'; did you mean 'this_insn'?
if ( *insn_data_0[this_insn_1[2].fld[0].rtint].operand[ic].constraint == 61 
                  ^~~~~~~~~~~
                  this_insn
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/combine_reloads/src/reload.c:181:12: note: 'this_insn' declared here
static rtx this_insn;
           ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/combine_reloads/src/reload.c:2169:5: error: use of undeclared identifier 'insn_data_0'; did you mean 'insn_data'?
|| *insn_data_0[this_insn_1[2].fld[0].rtint].operand[ic].constraint == 43 ) 
    ^~~~~~~~~~~
    insn_data
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/combine_reloads/src/recog.h:249:31: note: 'insn_data' declared here
extern const struct insn_data insn_data[];
                              ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/combine_reloads/src/reload.c:2169:17: error: use of undeclared identifier 'this_insn_1'; did you mean 'this_insn'?
|| *insn_data_0[this_insn_1[2].fld[0].rtint].operand[ic].constraint == 43 ) 
                ^~~~~~~~~~~
                this_insn
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/combine_reloads/src/reload.c:181:12: note: 'this_insn' declared here
static rtx this_insn;
           ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/combine_reloads/src/reload.c:2174:14: error: use of undeclared identifier 'this_insn_1'; did you mean 'this_insn'?
for ( note = this_insn_1[3].fld[0].rtx; note; note = ( rtx)note[1] ) 
             ^~~~~~~~~~~
             this_insn
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/combine_reloads/src/reload.c:181:12: note: 'this_insn' declared here
static rtx this_insn;
           ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/combine_reloads/src/reload.c:2174:60: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
for ( note = this_insn_1[3].fld[0].rtx; note; note = ( rtx)note[1] ) 
                                                           ^~~~~~~
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/combine_reloads/src/reload.c:2221:6: error: use of undeclared identifier 'mode_class_0'; did you mean 'mode_class'?
if ( mode_class_0[rld[output_reload].outmode] != MODE_COMPLEX_INT ) 
     ^~~~~~~~~~~~
     mode_class
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/combine_reloads/src/machmode.h:52:30: note: 'mode_class' declared here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/combine_reloads/src/reload.c:2222:7: error: use of undeclared identifier 'mode_class_0'; did you mean 'mode_class'?
v23 = mode_class_0[rld[output_reload].outmode] == MODE_COMPLEX_FLOAT; 
      ^~~~~~~~~~~~
      mode_class
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/combine_reloads/src/machmode.h:52:30: note: 'mode_class' declared here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/combine_reloads/src/reload.c:2266:6: error: use of undeclared identifier 'mode_class_0'; did you mean 'mode_class'?
if ( mode_class_0[( unsigned __int8)BYTE2( *( _DWORD *)note->fld[0].rtwint)] != MODE_COMPLEX_INT ) 
     ^~~~~~~~~~~~
     mode_class
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/combine_reloads/src/machmode.h:52:30: note: 'mode_class' declared here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/combine_reloads/src/reload.c:2267:7: error: use of undeclared identifier 'mode_class_0'; did you mean 'mode_class'?
v19 = mode_class_0[( unsigned __int8)BYTE2( *( _DWORD *)note->fld[0].rtwint)] == MODE_COMPLEX_FLOAT; 
      ^~~~~~~~~~~~
      mode_class
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/combine_reloads/src/machmode.h:52:30: note: 'mode_class' declared here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/combine_reloads/src/reload.c:2319:6: error: use of undeclared identifier 'mode_class_0'; did you mean 'mode_class'?
if ( mode_class_0[rld[ib].inmode] != MODE_COMPLEX_INT ) 
     ^~~~~~~~~~~~
     mode_class
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/combine_reloads/src/machmode.h:52:30: note: 'mode_class' declared here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/combine_reloads/src/reload.c:2320:7: error: use of undeclared identifier 'mode_class_0'; did you mean 'mode_class'?
v29 = mode_class_0[rld[ib].inmode] == MODE_COMPLEX_FLOAT; 
      ^~~~~~~~~~~~
      mode_class
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/combine_reloads/src/machmode.h:52:30: note: 'mode_class' declared here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/combine_reloads/src/reload.c:2343:6: error: use of undeclared identifier 'mode_class_0'; did you mean 'mode_class'?
if ( mode_class_0[rld[output_reload].outmode] != MODE_COMPLEX_INT ) 
     ^~~~~~~~~~~~
     mode_class
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/combine_reloads/src/machmode.h:52:30: note: 'mode_class' declared here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/combine_reloads/src/reload.c:2344:7: error: use of undeclared identifier 'mode_class_0'; did you mean 'mode_class'?
v26 = mode_class_0[rld[output_reload].outmode] == MODE_COMPLEX_FLOAT; 
      ^~~~~~~~~~~~
      mode_class
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/combine_reloads/src/machmode.h:52:30: note: 'mode_class' declared here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
19 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/combine_reloads/src/obj/reload.o] Error 1
